Move tests into separate classes. Solve 2024-04. Optimize 2025-08.